--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,10 @@
 ---
 
 @import "minimal-light";
+.image.avatar img {
+    width: 150px;  /* 你可以根据需要调整大小 */
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
